# smit.studio-test

./: .env-example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
src/: config.py  database.py
src/insurance_client/: client.py  models.py  router.py  schemas.py
